--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/GravityRacing/Level/Temp.Temp
+EditorStartupMap=/Game/GravityRacing/Level/Temp.Temp
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
