--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,18 @@
 *.app
 *.out
 
+*.idb
+*.tlog
+*.lastbuildstate
+*.pdb
+*.ilk
+*.pch
+*.log
+*.exe.recipe
+*.vcxproj.FileListAbsolute.txt
+
+GravityR.* 
+
 # Unreal Engine
 Binaries/
 Build/
