언리얼클라 서버 연결

--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/GravityRacing/Level/Temp.Temp
 EditorStartupMap=/Game/GravityRacing/Level/Temp.Temp
+GameInstanceClass=/Script/GravityRacing.GRGameInstance
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
