--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -27,6 +27,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.RayTracing.Shadows=True
 r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
