--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GravityRacing/Maps/Temp.Temp
-EditorStartupMap=/Game/GravityRacing/Maps/Temp.Temp
+GameDefaultMap=/Game/GravityRacing/Maps/MainLevel.MainLevel
+EditorStartupMap=/Game/GravityRacing/Maps/MainLevel.MainLevel
 GameInstanceClass=/Script/GravityRacing.GRGameInstance
 
 [/Script/Engine.RendererSettings]
