--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/GravityRacing/Maps/MainLevel.MainLevel
-EditorStartupMap=/Game/GravityRacing/Maps/MainLevel.MainLevel
+GameDefaultMap=/Game/GravityRacing/Maps/LobbyLevel.LobbyLevel
+EditorStartupMap=/Game/GravityRacing/Maps/LobbyLevel.LobbyLevel
 GameInstanceClass=/Script/GravityRacing.GRGameInstance
 
 [/Script/Engine.RendererSettings]
@@ -28,6 +28,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.RayTracing.Shadows=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=True
+r.MobileHDR=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -151,4 +152,16 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
+bEnableBundle=True
+TargetSDKVersion=33
+bPackageDataInsideApk=True
+bDisableVerifyOBBOnStartUp=True
+bAllowLargeOBBFiles=True
+bEnableGooglePlaySupport=True
+KeyStore=ExampleKey.keystore
+KeyAlias=MyKey
+KeyStorePassword=noreunja
+bShowLaunchImage=False
 
