--- a/GravityRacing/Config/DefaultGame.ini
+++ b/GravityRacing/Config/DefaultGame.ini
@@ -5,11 +5,11 @@ ProjectID=00963C0F4CB39DA8B9DFEC9955106D77
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
-FullRebuild=False
-ForDistribution=False
-IncludeDebugFiles=False
+FullRebuild=True
+ForDistribution=True
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
@@ -100,7 +100,9 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/GravityRacing/Maps/LobbyLevel")
++MapsToCook=(FilePath="/Game/GravityRacing/Maps/MainLevel")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
++DirectoriesToAlwaysCook=(Path="/Game/GravityRacing/Audio")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
