조작방식 변경, 부스트 변경, 모바일 환경에서 조명 다시 나옴

--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -28,7 +28,7 @@ r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.RayTracing.Shadows=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.MotionBlur=True
-r.MobileHDR=False
+r.MobileHDR=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -155,7 +155,7 @@ ManualIPAddress=
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bEnableBundle=True
-TargetSDKVersion=33
+TargetSDKVersion=36
 bPackageDataInsideApk=True
 bDisableVerifyOBBOnStartUp=True
 bAllowLargeOBBFiles=True
@@ -164,4 +164,5 @@ KeyStore=ExampleKey.keystore
 KeyAlias=MyKey
 KeyStorePassword=noreunja
 bShowLaunchImage=False
+StoreVersion=2
 
