패키징 수정

--- a/GravityRacing/Config/DefaultGame.ini
+++ b/GravityRacing/Config/DefaultGame.ini
@@ -103,6 +103,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/GravityRacing/Maps/MainLevel")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 +DirectoriesToAlwaysCook=(Path="/Game/GravityRacing/Audio")
++DirectoriesToAlwaysCook=(Path="/Game")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
