--- a/GravityRacing/Config/DefaultEngine.ini
+++ b/GravityRacing/Config/DefaultEngine.ini
@@ -159,10 +159,12 @@ TargetSDKVersion=36
 bPackageDataInsideApk=True
 bDisableVerifyOBBOnStartUp=True
 bAllowLargeOBBFiles=True
-bEnableGooglePlaySupport=True
+bEnableGooglePlaySupport=False
 KeyStore=ExampleKey.keystore
 KeyAlias=MyKey
 KeyStorePassword=noreunja
 bShowLaunchImage=False
-StoreVersion=2
+StoreVersion=4
+bSupportAdMob=False
+VersionDisplayName=1.0
 
