--- a/GravityRacing/Config/DefaultGame.ini
+++ b/GravityRacing/Config/DefaultGame.ini
@@ -104,6 +104,7 @@ bSkipMovies=False
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 +DirectoriesToAlwaysCook=(Path="/Game/GravityRacing/Audio")
 +DirectoriesToAlwaysCook=(Path="/Game")
++DirectoriesToAlwaysCook=(Path="/Game/GravityRacing")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
 
